# mmap

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
apps/: CMakeLists.txt
apps/endian/: CMakeLists.txt  main.cpp
apps/kafka_test/: CMakeLists.txt  endian.spec.cpp  request_write.spec.cpp  response_read.spec.cpp
apps/mmap_reader/: CMakeLists.txt  main.cpp
apps/mmap_writer/: CMakeLists.txt  main.cpp
dependencies/: clang  conanfile.txt
dependencies/cmake/: ForwardCMakeVars.cmake
dependencies/kafka/: constants.hpp  error.hpp  fetch_request.hpp  fetch_response.hpp  message.hpp  metadata_request.hpp  metadata_response.hpp  offset_commit_request.hpp  offset_commit_response.hpp  offset_fetch_request.hpp  offset_fetch_response.hpp  offset_request.hpp  offset_response.hpp  produce_request.hpp  produce_response.hpp
dependencies/kafka/detail/: byte_streambuf.hpp  endian.hpp  fetch_response_iterator.hpp  functional.hpp  recursive_message_set_iterator.hpp  recursive_messageset_iterator.hpp  request_write.hpp  topic_partitions.hpp  topics_partitions.hpp
dependencies/kafka/detail/impl/: byte_streambuf.hpp  consumer_metadata_request_write.hpp  consumer_metadata_response_read.hpp  metadata_request_write.hpp  producte_request_write.hpp  recursive_messageset_iterator.hpp  request_write.hpp  response_read.hpp
dependencies/kafka/impl/: connection_configuration.hpp  metadata_request.hpp  produce_request.hpp
lib/: CMakeLists.txt
lib/config/: config.json
lib/entity/: entity_util.hpp
lib/kafka/: connection_configuration.hpp  error.hpp  message.hpp  primitives.hpp  product_request.hpp  response.hpp
lib/kafka/detail/: edian.hpp  functional.hpp  recursive_message_set_iterator.hpp  request_write.hpp  response_read.hpp  topic_partitions.hpp
lib/kafka/impl/: connection_configuration.hpp
lib/message/: event.hpp
lib/model/: fill.hpp  order.hpp
lib/network/: CMakeLists.txt  binance_connection.cpp  binance_connection.hpp  connect_option.hpp  connection_key.cpp  connection_key.hpp  event.cpp  event.hpp  ftx_connection.cpp  ftx_connection.hpp  http.cpp  http.hpp  http.spec.cpp  http_connection.cpp  http_connection.hpp  http_connection_impl.cpp  http_connection_impl.hpp  message.hpp  rate_limit_key.hpp  sliding_window_log.hpp  throttler.hpp  token_bucket.hpp  types.hpp  websocket.cpp  websocket.hpp  websocket_impl.cpp  websocket_impl.hpp  websocket_key.cpp  websocket_key.hpp  ws_type.hpp
lib/util/: CMakeLists.txt  compare.hpp  explainer.cpp  explainer.hpp  explainer.spec.cpp  format.hpp
